--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live Leaderboard</title>
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 
@@ -17,7 +18,7 @@
       }
       .container {
         width: 100%;
-        max-width: 700px;
+        max-width: 800px; /* Slightly wider for projector */
       }
       .header {
         text-align: center;
@@ -28,61 +29,76 @@
         background: linear-gradient(to right, #fbbf24, #d97706);
         -webkit-background-clip: text;
         color: transparent;
-        font-size: 36px;
+        font-size: 42px; /* Bigger for projector */
+        text-transform: uppercase;
+        letter-spacing: 1px;
       }
       p {
         color: #9ca3af;
-        margin-top: 5px;
+        margin-top: 10px;
+        font-size: 18px;
       }
       .card {
         background: #1f2937;
         border-radius: 14px;
         overflow: hidden;
+        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
       }
       .row {
         display: flex;
         align-items: center;
-        padding: 16px 22px;
+        padding: 18px 25px;
         border-bottom: 1px solid #374151;
         transition: all 0.3s ease;
       }
+      .row:last-child {
+        border-bottom: none;
+      }
       .rank {
-        width: 50px;
+        width: 60px;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 24px;
+        text-align: center;
       }
       .rank-1 {
         color: #fbbf24;
+        text-shadow: 0 0 10px rgba(251, 191, 36, 0.5);
       }
       .rank-2 {
-        color: #9ca3af;
+        color: #e5e7eb;
       }
       .rank-3 {
         color: #b45309;
       }
+
       .name {
         flex-grow: 1;
-        font-size: 18px;
+        font-size: 20px;
+        padding-left: 15px;
       }
       .score {
         color: #4ade80;
         font-weight: bold;
-        font-size: 18px;
+        font-size: 22px;
+        width: 80px;
+        text-align: right;
       }
+      /* Highlight "My" Row */
       .me {
-        background: #374151;
-        border-left: 4px solid #3b82f6;
+        background: #1e3a8a;
+        border-left: 6px solid #3b82f6;
       }
       .loading {
         text-align: center;
-        padding: 30px;
+        padding: 40px;
         color: #6b7280;
+        font-size: 18px;
       }
       .hint {
         text-align: center;
-        margin-top: 15px;
-        color: #6b7280;
-        font-size: 13px;
+        margin-top: 20px;
+        color: #4b5563;
+        font-size: 14px;
       }
     </style>
   </head>
@@ -91,87 +107,119 @@
     <div class="container">
       <div class="header">
         <h1>🏆 Live Standings</h1>
-        <p id="sessionBadge">Session: --</p>
+        <p id="sessionBadge">Loading Session...</p>
       </div>
 
       <div class="card" id="board">
-        <div class="loading">Waiting for players…</div>
+        <div class="loading">Waiting for data...</div>
       </div>
 
-      <div class="hint">Press <b>F</b> for fullscreen (Projector Mode)</div>
+      <div class="hint">Press <b>F</b> for Fullscreen (Best for Projector)</div>
     </div>
 
     <script>
-      /* =====================
-   SESSION
-===================== */
-      const CODE = sessionStorage.getItem("SESSION_CODE");
-      const MY_CODE = sessionStorage.getItem("PLAYER_CODE");
+      // 🟢 CONFIGURATION
+      const API_BASE = "https://slido-9mg1.onrender.com";
 
-      document.getElementById("sessionBadge").innerText = `Session: ${CODE}`;
+      // 1. GET SESSION CODE
+      // Try to get from URL (?code=123) OR SessionStorage
+      const urlParams = new URLSearchParams(window.location.search);
+      let CODE =
+        urlParams.get("code") || sessionStorage.getItem("SESSION_CODE");
+
+      // Safety: If no code, ask user
+      if (!CODE) {
+        CODE = prompt("Enter Session Code (e.g., GAME-1):");
+        if (CODE) sessionStorage.setItem("SESSION_CODE", CODE);
+      }
+
+      document.getElementById("sessionBadge").innerText = CODE
+        ? `Session: ${CODE}`
+        : "No Session Selected";
 
       /* =====================
-   SOCKET
-===================== */
-      const socket = io("https://slido-9mg1.onrender.com", {
+         SOCKET CONNECTION
+      ===================== */
+      const socket = io(API_BASE, {
         transports: ["websocket"],
         reconnection: true,
       });
 
       socket.on("connect", () => {
-        socket.emit("join:session", CODE);
-        fetchLeaderboard();
+        console.log("Connected to Live Server");
+        if (CODE) {
+          socket.emit("join:session", CODE);
+          fetchLeaderboard();
+        }
       });
 
-      /* =====================
-   LIVE UPDATES
-===================== */
+      // Listen for REAL-TIME updates
       socket.on("leaderboard:update", () => {
+        console.log("New Score Update Received!");
         fetchLeaderboard();
       });
 
       /* =====================
-   FETCH LEADERBOARD
-===================== */
+         FETCH LOGIC
+      ===================== */
       async function fetchLeaderboard() {
+        if (!CODE) return;
+
         try {
-          const res = await fetch(`https://slido-9mg1.onrender.com/${CODE}`);
-          const data = await res.json();
+          // 🟢 CORRECT API ENDPOINT
+          const res = await fetch(
+            `${API_BASE}/api/participants/leaderboard/${CODE}`,
+          );
+          const json = await res.json();
+
           const board = document.getElementById("board");
 
-          if (!data.data || data.data.length === 0) {
-            board.innerHTML = '<div class="loading">No participants yet</div>';
+          if (!json.success || !json.data || json.data.length === 0) {
+            board.innerHTML =
+              '<div class="loading">Waiting for players to join...</div>';
             return;
           }
 
           let html = "";
-          data.data.forEach((p, index) => {
-            const rankClass = index < 3 ? `rank-${index + 1}` : "";
-            const isMe = p.uniqueCode === MY_CODE ? "me" : "";
+          const MY_PLAYER_ID = sessionStorage.getItem("PLAYER_ID"); // To highlight self if viewing on phone
 
-            let icon = `#${p.rank}`;
-            if (index === 0) icon = "🥇";
-            if (index === 1) icon = "🥈";
-            if (index === 2) icon = "🥉";
+          json.data.forEach((p, index) => {
+            const isMe = p._id === MY_PLAYER_ID ? "me" : "";
+
+            // Rank Icons
+            let rankDisplay = `#${index + 1}`;
+            let rankClass = "";
+
+            if (index === 0) {
+              rankDisplay = "🥇";
+              rankClass = "rank-1";
+            } else if (index === 1) {
+              rankDisplay = "🥈";
+              rankClass = "rank-2";
+            } else if (index === 2) {
+              rankDisplay = "🥉";
+              rankClass = "rank-3";
+            }
 
             html += `
-        <div class="row ${isMe}">
-          <div class="rank ${rankClass}">${icon}</div>
-          <div class="name">${p.name} ${isMe ? "(You)" : ""}</div>
-          <div class="score">${p.totalScore}</div>
-        </div>
-      `;
+              <div class="row ${isMe}">
+                <div class="rank ${rankClass}">${rankDisplay}</div>
+                <div class="name">${p.name} ${isMe ? "(You)" : ""}</div>
+                <div class="score">${p.totalScore}</div>
+              </div>
+            `;
           });
 
           board.innerHTML = html;
         } catch (e) {
-          console.error("Leaderboard error:", e);
+          console.error("Leaderboard Error:", e);
         }
       }
 
       /* =====================
-   PROJECTOR MODE
-===================== */
+         UTILITIES
+      ===================== */
+      // Fullscreen Toggle
       document.addEventListener("keydown", (e) => {
         if (e.key.toLowerCase() === "f") {
           if (!document.fullscreenElement) {
@@ -182,10 +230,14 @@
         }
       });
 
-      /* Auto refresh when tab refocuses */
+      // Auto-Refresh Logic (Backup safety)
+      setInterval(fetchLeaderboard, 5000); // Check every 5s just in case
       document.addEventListener("visibilitychange", () => {
         if (!document.hidden) fetchLeaderboard();
       });
+
+      // Initial Load
+      fetchLeaderboard();
     </script>
   </body>
 </html>
