--- a/frontend/leaderboard.html
+++ b/frontend/leaderboard.html
@@ -118,7 +118,7 @@
     </div>
 
     <script>
-      // 🟢 CONFIGURATION
+      // 🟢 CONFIGURATION (Live Backend)
       const API_BASE = "https://slido-9mg1.onrender.com";
 
       // 1. GET SESSION CODE
